# capy-art-studio

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt
.github/workflows/: BuildOnLinux.yml  BuildOnMacOS.yml  BuildOnWindows.yml  main.yml
conan/: conanfile.py
docs/: FilesFormats.md
resources/: resources.qrc
scripts/: apply_clang_format.sh  conan_install_debug.sh  conan_install_release.sh  fix_formatting.sh
src/: Application.cpp  Application.hpp  main.cpp
src/ai/: AiServiceInterface.cpp  AiServiceInterface.hpp
src/algorithms/: AlphaBlending.cpp  AlphaBlending.hpp  Bresenham.cpp  Bresenham.hpp  Luminance.cpp  Luminance.hpp
src/graphics/: Colors.hpp  Drawing.cpp  Drawing.hpp  DrawingTools.hpp  GraphicalBackend.cpp  GraphicalBackend.hpp  Layer.cpp  Layer.hpp  Pixel.cpp  Pixel.hpp  PixelPosition.cpp  PixelPosition.hpp
src/graphics/drawing-tools/: HandTool.cpp  HandTool.hpp  IDrawingTool.cpp  IDrawingTool.hpp  PenTool.cpp  PenTool.hpp  Toolbox.cpp  Toolbox.hpp
src/io/: ApplicationFilesystem.cpp  ApplicationFilesystem.hpp  CapyFileManager.cpp  CapyFileManager.hpp  ChunkFileLoader.cpp  ChunkFileLoader.hpp  ChunkFileManagerBase.cpp  ChunkFileManagerBase.hpp  ChunkFileReader.cpp  ChunkFileReader.hpp  ChunkFileWriter.cpp  ChunkFileWriter.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ConfigurationManager.tpp  ConsoleLogger.cpp  ConsoleLogger.hpp  JsonSerializable.hpp  JsonSerializable.tpp  ResourceManager.cpp  ResourceManager.hpp
src/managers/: Manager.hpp  PalettesManager.cpp  PalettesManager.hpp  ProjectsManager.cpp  ProjectsManager.hpp
src/meta/: CompileTimeChecks.hpp  CompileTimeChecks.tpp  Converters.cpp  Converters.hpp  ErrorHandling.cpp  ErrorHandling.hpp  General.cpp  General.hpp  General.tpp  UnimplementedException.cpp  UnimplementedException.hpp
src/models/: PaletteColorTableModel.cpp  PaletteColorTableModel.hpp  PaletteModel.cpp  PaletteModel.hpp  ProjectsModel.cpp  ProjectsModel.hpp
src/network/: AsyncFileDownloader.cpp  AsyncFileDownloader.hpp
src/plugin/: DynamicLibrary.cpp  DynamicLibrary.hpp  DynamicLibrary.tpp  ExternalPlugin.cpp  ExternalPlugin.hpp
src/ui/: ConsoleWindow.cpp  ConsoleWindow.hpp  ConsoleWindow.ui  DrawingCanvasItem.cpp  DrawingCanvasItem.hpp  DrawingWidget.cpp  DrawingWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  UiHelpers.cpp  UiHelpers.hpp  WelcomeScreen.cpp  WelcomeScreen.hpp  WelcomeScreen.ui  mainwindow.ui
src/ui/dialogs/: NewFileDialog.cpp  NewFileDialog.hpp  NewFileDialog.ui
src/ui/docks/: ColorArea.cpp  ColorArea.hpp  ColorArea.ui  ColorPaletteArea.cpp  ColorPaletteArea.hpp  ColorPaletteArea.ui  ColorPickerArea.cpp  ColorPickerArea.hpp  ColorPickerArea.ui  LayersArea.cpp  LayersArea.hpp  LayersArea.ui  ToolsArea.cpp  ToolsArea.hpp  ToolsArea.ui
src/ui/layouts/: FlowLayout.cpp  FlowLayout.hpp
src/ui/utils/: AutoSizeSavingItem.cpp  AutoSizeSavingItem.hpp  CheckerboardPixmap.cpp  CheckerboardPixmap.hpp  ClickableLabel.cpp  ClickableLabel.hpp  MessageBoxUtils.cpp  MessageBoxUtils.hpp  SpacerUtils.cpp  SpacerUtils.hpp
src/ui/widgets/: ColorPicker.cpp  ColorPicker.hpp  ColorPickerSlider.cpp  ColorPickerSlider.hpp  DockableWidget.cpp  DockableWidget.hpp  DrawingCanvasItem.cpp  DrawingCanvasItem.hpp  DrawingWidget.cpp  DrawingWidget.hpp  StatusBarWidget.cpp  StatusBarWidget.hpp  StatusBarWidget.ui
src/ui/widgets/color-pickers/: DefaultColorPicker.cpp  DefaultColorPicker.hpp  DefaultColorPickerSlider.cpp  DefaultColorPickerSlider.hpp  IBaseColorPicker.hpp
src/ui/widgets/delegates/: ColorRectangleDelegate.cpp  ColorRectangleDelegate.hpp  ProjectDelegate.cpp  ProjectDelegate.hpp  ProjectDelegate.ui  ToolButton.cpp  ToolButton.hpp
src/ui/widgets/utils/: AutoSizeSavingItem.cpp  AutoSizeSavingItem.hpp  CheckerboardPixmap.cpp  CheckerboardPixmap.hpp  ClickableLabel.hpp  MessageBoxUtils.cpp  MessageBoxUtils.hpp  ResourceManager.cpp  ResourceManager.hpp  SpacerUtils.cpp  SpacerUtils.hpp
src/user/: Palette.cpp  Palette.hpp  Project.cpp  Project.hpp
src/utils/: Colors.hpp  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationManager.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  Converters.cpp  Converters.hpp  Dimensions.cpp  Dimensions.hpp  ErrorHandling.hpp  General.cpp  General.hpp  Memory.cpp  Memory.hpp  TomlWrapper.hpp  UiHelpers.cpp  UiHelpers.hpp
tests/: main.cpp  placeholder.cpp
tests/algorithms/: AlphaBlendingTests.cpp  BresenhamTests.cpp  LuminanceTests.cpp
tests/user/: PaletteTests.cpp
tests/user/resources/: TestPalette.json
tools/: create_empty_project.py  create_installer_linux.py  create_installer_osx.py  create_installer_windows.py
ui/: Main.qml
